admin dashboard got seperated successfully
Made-with: Cursor