@@ -38,8 +38,9 @@ public class SecurityConfig {
             .authorizeHttpRequests(auth -> auth
                 .requestMatchers("/auth/**", "/swagger-ui.html", "/swagger-ui/**", "/v3/api-docs/**").permitAll()
                 .requestMatchers("/admin/reports/**").hasRole("ADMIN")
-                .requestMatchers("/admin/dashboard").authenticated()
                 .requestMatchers("/admin/**").hasRole("ADMIN")
+                .requestMatchers("/metrics/**").hasRole("ADMIN")
+                .requestMatchers("/pdf/**").hasRole("ADMIN")
                 .requestMatchers("/users/*/qrcode").authenticated()
                 .requestMatchers("/events/*/attendance/*/certificate/pdf").authenticated()
                 .anyRequest().authenticated()
@@ -53,8 +54,12 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:4200"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // Dev: allow any port on localhost / 127.0.0.1 (e.g. 4200 vs other ports, ng serve --host)
+        configuration.setAllowedOriginPatterns(List.of(
+                "http://localhost:*",
+                "http://127.0.0.1:*"
+        ));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         
